# cassette

./: .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FILE_STRUCTURE.md  LOADER_MIGRATION.md  Makefile  README.md  docker-compose.yml  events.json  integration-test.sh  justfile  nip_events.json  package-lock.json  package.json  real_events.json  test-close.js  test-events.json  test_cast_command.sh  test_deck_generation.sh  test_deck_nip01.sh  test_deck_validation.sh  test_events.json  test_interactive_ui.sh  test_verbose_flag.sh
.github/workflows/: deploy-site.yml  release.yml  test.yml
benchmarks/: BENCHMARK.md  Makefile  README.md  clean_results.sh  config.yaml  quick_test.sh  run_all_benchmarks.sh  run_benchmark.sh  run_benchmark_with_report.sh  run_cassette_benchmark.sh
benchmarks/cpp/: Makefile  benchmark.cpp
benchmarks/dart/: Makefile  benchmark.dart  pubspec.yaml
benchmarks/deck/: Makefile  deck_benchmark.py  requirements.txt
benchmarks/go/: Makefile  benchmark.go  go.mod
benchmarks/js/: Makefile  package-lock.json  package.json
benchmarks/output/: py.md  rust.md
benchmarks/py/: Makefile  cassette_bench_proper.py  requirements.txt
benchmarks/results/: benchmark_1753564537.json  benchmark_summary_20250726_214256.txt  benchmark_summary_20250726_214317.txt  benchmark_summary_20250726_214832.txt  benchmark_summary_20250726_222425.txt  benchmark_summary_20250726_223110.txt  benchmark_summary_20250726_223448.txt  benchmark_summary_20250726_225525.txt  benchmark_summary_20250726_230303.txt
benchmarks/rust/: Cargo.toml  Makefile  run_rust_benchmark.sh
benchmarks/rust/src/: main.rs
benchmarks/scripts/: cassette_bench_proper.py  create_test_samples.py  deck_benchmark.py  generate_cassettes.sh  generate_large_cassette.sh  generate_limited_cassettes.sh  generate_real_samples.sh  generate_samples.sh  generate_simple_samples.sh  generate_small_cassettes.sh  load_config.py  run_clean_benchmark.py
bindings/cpp/: README.md
bindings/dart/: README.md
bindings/go/: README.md  cassette_loader.go  go.mod
bindings/js/: README.md  package.json
bindings/py/: README.md  cassette_loader.py  requirements.txt
bindings/rust/: README.md
boombox/: README.md  index.ts  package.json  schema-validator.ts  schema.test.ts  validate-schema.js
boombox/scripts/: process-wasm.js  update-wasm-bindings.js
boombox/wasm/: sandwichs_favs.d.ts  sandwichs_favs.js  sandwichs_favs_bg.js  sandwichs_favs_bg.wasm  sandwichs_favs_bg.wasm.d.ts
cassette/: .gitignore  README.md  build.zig
cassette-core/: Cargo.toml  README.md
cassette-core/src/: lib.rs
cassette-deck/: cassettes  loader-test-utils.ts  package.json  schema-validator.ts  schema.test.ts  test-logger.ts  wasm.test.ts
cassette-deck/scripts/: README.md
cassette-loader/: README.md  SUMMARY.md  USAGE.md  package-lock.json  package.json  tsconfig.json
cassette-loader-py/: .gitignore  README.md  test_cassette.py
cassette-loader/examples/: browser-demo.html  browser-integration.ts
cassette-loader/src/: browser.ts  coreIntegration.ts  detector.ts  index.ts  loader.ts  memory.ts  types.ts  utils.ts
cassette-test-cli/: README.md  package-lock.json  package.json  test-cross-language.js  test-events.json  test-events.rs  test-ndjson.jsonl
cassette-tools/: .gitignore  Cargo.toml  README.md
cassette-tools/src/: lib.rs  wasm_interface.rs
cassette-tools/src/nips/: mod.rs
cassette-tools/src/nips/nip11/: mod.rs
cassette/src/: auto_describe.zig  main.zig  schema.zig
cli/: .gitignore  Cargo.toml  README.md  build.rs  notes.json  search-test-events.json  simple_events.json  test_events.json
cli/examples/: notes.json  test-both-approaches.sh  test-events.json
cli/examples/custom-cassette/: Cargo.toml  README.md
cli/examples/custom-cassette/src/: lib.rs
cli/examples/test-nips/: Cargo.toml
cli/examples/test-nips/src/: lib.rs
cli/src/: deps.rs  embedded_cassette_tools.rs  lib.rs  main.rs  templates.rs
cli/src/templates/: Cargo.toml  cassette_template.rs
cli/src/ui/: animations.rs  cast.rs  colors.rs  components.rs  dub.rs  mod.rs  play.rs  record.rs  scrub.rs  terminal.rs
cli/tests/: cassette_tests.rs  core_unit_tests.rs  integration_tests.rs  nip01_tests.rs
counter-mcp/: config.yml  index.ts  package.json
counter-wasm/: README.md  index.html
counter-wasm/src/: main.zig
gui/: README.md  cassette-test-original.html  cassette-test.html  index.html  package-lock.json  package.json  pnpm-lock.yaml
gui-broken/: index.html  pnpm-lock.yaml
gui-new/: index.html  package.json
gui-new/src/: app.css
gui/src/: App.svelte
incrementer/: README.md  incrementer.wasm
incrementer/src/: main.zig
incrementer/test/: index.cjs
loaders/cpp/: CMakeLists.txt  README.md
loaders/cpp/examples/: example.cpp
loaders/cpp/include/: cassette_loader.hpp
loaders/cpp/src/: cassette_loader.cpp
loaders/dart/: README.md  pubspec.yaml
loaders/go/: README.md  cassette_loader.go
loaders/js/: README.md  USAGE.md  package.json  tsconfig.json
loaders/py/: README.md  cassette_loader.py  setup.py  test_loader.py
loaders/rust/: Cargo.toml  README.md
loaders/rust/src/: lib.rs
nostr-proxy/: README.md  index.ts  package.json
player-gui/: pnpm-lock.yaml
player-gui/src/: app.css
plusone-mcp/: README.md  index.ts  testdvm.ts
plusone-wasm/: README.md  build.zig  build.zig.zon  incrementer.wasm  temp.wasm
plusone-wasm/src/: auto_describe.zig  main.zig  schema.zig
sandwichs-favs/: Cargo.toml  notes.json
sandwichs-favs/src/: lib.rs  main.rs
server/: index.ts  package-lock.json  package.json
site/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
test-data/: .gitignore
tests/: README.md  advanced-e2e-test.sh  e2e-test.sh  integration-test.sh  simple-e2e-test.sh  test-cassette-memory.js  test-cli-cassette.js  test-close-handling.js  test-debug-cassette.js  test-deduplication.js  test-direct-cassette.js  test-generated-cassette.js  test-nak-format.sh  test-nip119.js  test-simple.js  test-single-close.js  test-specific-cassette.js
(+111 files in other folders)
