[package]
name = "cassette-tools"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nip11 = []  # Relay Information Document
nip42 = ["nip11", "chrono"]  # Authentication (requires NIP-11 to announce capability)
nip45 = ["nip11"]  # Event Counts (requires NIP-11 to announce capability)
nip50 = ["nip11"]  # Search Capability (requires NIP-11 to announce capability)
full = ["nip11", "nip42", "nip45", "nip50"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", optional = true }
