[package]
name = "cassette-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for creating and managing Cassette platform modules"

# Set the binary name to "cassette"
[[bin]]
name = "cassette"
path = "src/main.rs"

# Keep the library functionality
[lib]
name = "cassette_cli"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
cassette-tools = { path = "../cassette-tools" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "js"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.8"
handlebars = "4.3"
wasmtime = "24.0"

[dev-dependencies]
# Add any test-specific dependencies here if needed
