[package]
name = "cassette-cli"
version = "0.9.1"
edition = "2021"
description = "CLI tool for creating and managing Cassette platform modules"
build = "build.rs"

# Set the binary name to "cassette"
[[bin]]
name = "cassette"
path = "src/main.rs"

# Keep the library functionality
[lib]
name = "cassette_cli"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["deck"]
deck = []

[dependencies]
cassette-tools = { path = "../cassette-tools" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "js"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.8"
handlebars = "4.3"
wasmtime = "15.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
crossterm = { version = "0.27", features = ["event-stream"] }
sha2 = "0.10"
hex = "0.4"
secp256k1 = { version = "0.27", features = ["global-context", "rand-std"] }
glob = "0.3"

[dev-dependencies]
# Add any test-specific dependencies here if needed
