[package]
name = "cassette-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
chrono = "0.4"
prettytable-rs = "0.10"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rand = "0.8"

[[bin]]
name = "cassette-bench"
path = "src/main.rs"