[package]
name = "cassette-loader"
version = "0.1.0"
edition = "2021"
authors = ["Cassette Contributors"]
description = "Rust loader for Cassette Nostr event cassettes"
license = "MIT"
repository = "https://github.com/cassette/loaders/rust"

[dependencies]
wasmtime = "23.0"
anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }