[package]
name = "custom-cassette"
version = "0.1.0"
edition = "2021"
description = "Custom cassette example for the Cassette platform"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cassette-tools = { path = "../../../cassette-tools" }
wasm-bindgen = "0.2"
serde_json = "1.0"
chrono = "0.4" 